fix(frontend): wrap link for small screens on "Prevention Method" page

--- a/frontend/src/pages/preventionMethod/_preventionMethod.scss
+++ b/frontend/src/pages/preventionMethod/_preventionMethod.scss
@@ -15,6 +15,10 @@
   .remarks {
     margin-top: 2.5rem;
     line-height: 1.5em;
+
+    a {
+      word-break: break-all;
+    }
   }
 
   &__visual {
